# Compiler

./: .gitignore  .pre-commit-config.yaml  .travis.yml  BUILD.md  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  configure
builds/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
builds/Debug/src/: Makefile  cmake_install.cmake
builds/Debug/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
builds/Release/: CMakeCache.txt  Makefile  cmake_install.cmake
builds/Release/src/: Makefile  cmake_install.cmake
builds/Release/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cli/: CMakeLists.txt
cmake/: Utilities.cmake
examples/: simple_arithmetic_main.c  simple_conditionals_main.c  simple_string_main.c
include/acc/common/: source_location.h
include/acc/error_handling/: error_handler.h  logger.h
include/acc/lexical/: lexer.hpp  symbol.hpp
include/acc/lexical_analysis/: concrete_lexer.h  lexer.h  token.h
include/acc/preprocessing/: preprocessor_context.h
include/acc/syntactic_analysis/: concrete_parser.h  parser.h
include/acc/syntactic_analysis/ast/common/: ast_node.h  ast_visitor.h  designation.h  designator.h  preprocessor_directive.h
include/acc/syntactic_analysis/ast/declarations/: array_declaration.h  bit_field_declaration.h  declaration.h  ellipsis_parameter.h  enum_declaration.h  enumerator.h  external_declaration.h  function_declaration.h  inline_declaration.h  parameter_declaration.h  parameter_type_list.h  pointer_declaration.h  struct_declaration.h  struct_declaration_list.h  struct_declarator.h  translation_unit.h  typedef_declaration.h  union_declaration.h  variable_declaration.h  variable_length_array_declaration.h
include/acc/syntactic_analysis/ast/expressions/: address_of.h  alignof_expression.h  array_subscript.h  binary_expression.h  cast_expression.h  comma_expression.h  compound_literal.h  conditional_expression.h  expression.h  function_call.h  initializer.h  initializer_list.h  literal.h  member_access.h  pointer_dereference.h  pointer_member_access.h  sizeof_expression.h  unary_expression.h
include/acc/syntactic_analysis/ast/statements/: break_statement.h  case_statement.h  compound_statement.h  continue_statement.h  default_statement.h  do_while_statement.h  expression_statement.h  for_statement.h  goto_statement.h  if_statement.h  inline_assembly.h  label_statement.h  null_statement.h  return_statement.h  statement.h  switch_statement.h  while_statement.h
include/acc/syntactic_analysis/ast/types/: abstract_declarator.h  boolean_type.h  complex_or_imaginary_type.h  direct_abstract_declarator.h  function_specifier.h  specifier_qualifier_list.h  storage_class_specifier.h  type_name.h  type_qualifier.h  type_specifier.h  typedef_name.h
include/acc/type_system/: type.h  type_checker.h
scripts/: consolidate_files.sh  format.sh  make_compiler.sh  make_coverage.sh  run_tests.sh
src/: CMakeLists.txt  lexical_analyzer.cc  lexical_analyzer.h  main.cc
src/acc/error_handling/: error_handler.cpp
src/acc/lexical_analysis/: concrete_lexer.cpp  token.cpp
src/acc/syntactic_analysis/: concrete_parser.cpp
src/acc/syntactic_analysis/ast/: binary_expression.cpp  function_declaration.cpp  literal.cpp  unary_expression.cpp
src/lexical/: CMakeLists.txt  lexer.cpp
src/semantic/: CMakeLists.txt
src/syntax/: CMakeLists.txt
src/utils/: argument_parser.cc  argument_parser.h  defaults.h  exit_codes.h  file_utilities.cc  file_utilities.h  token_utilities.cc  token_utilities.h
test/: CMakeLists.txt  test_argument_parser.cc  test_lexical_analyzer.cc  test_main.cc  test_main.h
test/benchmark/: CMakeLists.txt
test/unit/: CMakeLists.txt
test/unit/lexical/: CMakeLists.txt  unit_lexer.cc  unit_symbol.cc
test/unit/lexical_analysis/: CMakeLists.txt  lexer_test.cxx
test/unit/syntactic_analysis/: CMakeLists.txt  parser_test.cxx
